--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,42 @@
 asgiref==3.7.2
-certifi==2024.2.2
+attrs==23.1.0
+btrfsutil==6.7
+cffi==1.16.0
 charset-normalizer==3.3.2
-Django==5.0.2
+colorama==0.4.6
+cryptography==41.0.7
+defusedxml==0.7.1
+distlib==0.3.8
+distro==1.9.0
+Django==4.2.7
+filelock==3.13.1
+httpie==3.2.1
 idna==3.6
+libtorrent==2.0.9
+Mako==1.3.0
+Markdown==3.5.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.4
+mdurl==0.1.2
+meson==1.3.1
+multidict==6.0.4
+packaging==23.2
+platformdirs==4.1.0
+ply==3.11
+psutil==5.9.8
+pycparser==2.21
+Pygments==2.17.2
+PySocks==1.7.1
+pytz==2024.1
+Reflector==2023.6.28.0.36.1
 requests==2.31.0
-sqlparse==0.4.4
-urllib3==2.2.0
+requests-toolbelt==1.0.0
+rich==13.7.0
+rpm==4.18.2
+smbus==1.1
+sqlparse==0.4.3
+tqdm==4.66.1
+typing_extensions==4.9.0
+uc-micro-py==1.0.3
+urllib3==1.26.18
+virtualenv==20.25.0
