--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 asgiref==3.7.2
 attrs==23.1.0
-btrfsutil==6.7
+certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 colorama==0.4.6
@@ -28,12 +28,9 @@ pycparser==2.21
 Pygments==2.17.2
 PySocks==1.7.1
 pytz==2024.1
-Reflector==2023.6.28.0.36.1
 requests==2.31.0
 requests-toolbelt==1.0.0
 rich==13.7.0
-rpm==4.18.2
-smbus==1.1
 sqlparse==0.4.3
 tqdm==4.66.1
 typing_extensions==4.9.0
